fix(avaliacao-headless) adjustment in the endpoints and created ConverterDto where we centralize the headless logic
